# trip-planner-agent

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml
adk-app/trip_planner/: __init__.py
adk-app/trip_planner/.adk/: session.db
logs/: audit.jsonl
scripts/: hash_creator.py
src/: config.py
src/agents/: activities_agent.py  flight_agent.py  hotel_agent.py  intake_agent.py  tools.py  trip_agent.py  trip_planner.py  weather_agent.py
src/agents/.adk/: session.db
src/agents/instructions/: cloud.json  local.json
src/agents/utils/: callbacks.py  instruction_loader.py  tools.py
src/api/: app.py  auth.py  models.py  routes.py
src/cli/: main.py
src/security/: audit.py  filters.py  rate_limiter.py
tests/L1_components/: conftest.py  test_auth.py  test_guardrails.py  test_health.py  test_parsers_formatters.py  test_plan.py  test_tools.py
tests/L2_tool_integration/: conftest.py  test_activities_agent_trajectory.py  test_flight_agent_trajectory.py  test_hotel_agent_trajectory.py  test_intake_agent_trajectory.py  test_weather_agent_trajectory.py  trajectory.py
